# gcodekit

./: .AGENTS.md.swp  AGENTS.md  CHANGELOG.md  Cargo.toml  FINAL_SESSION_SUMMARY_10_19_2025.md  GUTTER_ALIGNMENT_FIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE_12_13.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_12_13.md  MVP.md  PHASE_12_13_IMPLEMENTATION.md  PHASE_12_13_PLAN.md  PHASE_IMPLEMENTATION_STEPS.md  README.md  SONNET45.md  SPEC.md  TESTS_RESULTS.md  opencode.json  package-lock.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md  feature_request.md
assets/gcode/: square_15mm_f500.gcode
docs/: AUTOCOMPLETE.md  AUTO_SYNC_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  CONSOLE_IMPLEMENTATION_CHECKLIST.md  CONSOLE_INTEGRATION_PLAN.md  CONSOLE_QUICK_REFERENCE.md  CURSOR_JUMP_FIX.md  DEVICE_CONSOLE_INTEGRATION_GUIDE.md  DEVICE_CONSOLE_QUICK_REFERENCE.md  EDITOR_IMPLEMENTATION_STATUS.md  EXECUTION_REPORT.md  FINAL_STATUS.md  FOLDING_FEATURE_REMOVAL.md  GAMEPAD_SUPPORT.md  IMAGE_TO_GCODE_CONVERSION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_12_13.md  IMPLEMENTATION_SUMMARY.md  JOG_WIDGET_REDESIGN.md  LEGACY_CLEANUP_PLAN.md  MACHINE_CALIBRATION.md  MACHINE_CONTROL_UI_FEATURES.md  MODULE_FIX_COMPLETE.md  MVP.md  PERFORMANCE_VIRTUALIZATION.md  PHASE2_MIGRATION_COMPLETE.md  PHASE_12_13_INDEX.md  PROJECT_13_INDEX.md  REAL_TIME_STATUS_MONITORING_PLAN.md  RECENT_UPDATES_OCT2025.md  SAVE_BUTTONS_IMPLEMENTATION.md  SONNET45.md  STATUS_MONITORING_ARCHITECTURE.md  STATUS_MONITORING_INDEX.md  STATUS_MONITORING_QUICK_START.md  TABBED_BOX_JIGSAW_GENERATION.md  TASK_8_SETTINGS_MANAGEMENT.md  THEME_FIX.md  TMPPLan.md  (+3 more)
src/: boolean_ops.rs  communication.rs  designer.rs  errors.rs  firmware.rs  jobs.rs  lib.rs  main.rs  materials.rs  plugins.rs  postprocessor.rs  web_pendant.rs  widgets.rs
src/app/: mod.rs  state.rs
src/calibration/: backlash_compensation.rs  calibration_procedures.rs  homing_config.rs  mod.rs  step_calibration.rs
src/cam/: mod.rs  nesting.rs  stl.rs  toolpaths.rs  types.rs
src/communication/: device_logger.rs  device_logger_integration.rs  fluidnc.rs  g2core.rs  grbl.rs  grbl_status.rs  smoothieware.rs  status_analytics.rs  status_manager.rs  status_monitor.rs  status_parser.rs  tinyg.rs
src/designer/: bitmap_import.rs  bitmap_processing.rs  cam_operations.rs  image_engraving.rs  jigsaw.rs  parametric_design.rs  parametric_ui.rs  part_nesting.rs  shape_generation.rs  tabbed_box.rs  toolpath_generation.rs  vector_import.rs
src/firmware/: mod.rs
src/gcode/: mod.rs
src/gcodeedit/: autocomplete.rs  back_plot.rs  config.rs  editor.rs  find_replace.rs  mod.rs  rules.rs  tokenizer.rs  virtualized_view.rs  vocabulary.rs
src/gcodeview/: mod.rs
src/input/: gamepad.rs  mod.rs
src/jobs/: manager.rs  mod.rs
src/layout/: bottom_status.rs  center_panel.rs  left_panel.rs  mod.rs  right_panel.rs  top_central_panel.rs  top_menu.rs
src/materials/: mod.rs  properties.rs  types.rs
src/ops/: file_ops.rs  gcode_ops.rs  (+3 more)
tests/: calibration_tests.rs  cam_boolean_operations.rs  designer.rs  gcode_optimizer.rs  input_tests.rs  main.rs  status_monitor_analytics.rs  status_parser_comprehensive.rs  tokenizer_mod.rs  web_pendant_tests.rs
(+65 files in other folders)
