[package]
name = "gcodekit"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
serialport = "4.2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.14"  # File dialog
anyhow = "1.0"  # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
usvg = "0.37"  # SVG parsing
dxf = "0.4"  # DXF file parsing
lyon = "1.0"  # 2D graphics and path operations for boolean operations
image = "0.24"  # Image processing for bitmap vectorization
rhai = "1.17"  # Scripting engine for parametric design
